src/tests/snapshots/nyx__tests__window_opening__check_fullscreen_maximize@fsF-tmF-wmAU.snap
---
source: src/tests/window_opening.rs
assertion_line: 889
description: "want maximized: AU\nconfig:\nwindow-rule {\n    open-fullscreen false\n    open-maximized-to-edges false\n}"
expression: snapshot
---
initial configure:
size: 0 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 0 × 0, bounds: 1280 × 720, states: []
size: 0 × 0, bounds: 1280 × 720, states: [Activated]
